--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@quasar/app-webpack/tsconfig-preset",
+  "extends": "@quasar/app-webpack/tsconfig-preset.json",
   "compilerOptions": {
     "baseUrl": "."
   }
