--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.15.5",
+    "apexcharts": "^3.36.0",
     "axios": "^1.1.3",
-    "core-js": "^3.25.5",
+    "core-js": "^3.26.0",
     "pinia": "^2.0.23",
     "quasar": "^2.10.0",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.6",
+    "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
     "@quasar/app-webpack": "^3.6.2",
-    "@typescript-eslint/eslint-plugin": "^5.40.1",
-    "@typescript-eslint/parser": "^5.40.1",
-    "eslint": "^8.25.0",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-vue": "^9.6.0",
     "prettier": "^2.7.1"
