--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.0.23",
     "quasar": "^2.10.0",
     "vue": "^3.2.41",
+    "vue-horizontal-timeline": "^0.12.0",
     "vue-router": "^4.1.6",
     "vue3-apexcharts": "^1.4.1"
   },
