--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.15.5",
-    "apexcharts": "^3.36.1",
+    "@quasar/quasar-ui-qcalendar": "^4.0.0-beta.15",
+    "apexcharts": "^3.36.3",
     "axios": "^1.1.3",
     "core-js": "^3.26.0",
     "pinia": "^2.0.23",
@@ -26,7 +27,7 @@
     "@quasar/app-webpack": "^3.6.2",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
-    "eslint": "^8.26.0",
+    "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-vue": "^9.7.0",
     "prettier": "^2.7.1"
