--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stockdivclient",
-  "version": "3.2.5",
+  "version": "3.2.6",
   "description": "Your portfolio. Your income.",
   "productName": "StockDiv: Your portfolio. Your income.",
   "author": "Amos",
@@ -11,17 +11,17 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/extras": "^1.15.9",
-    "@quasar/quasar-ui-qcalendar": "^4.0.0-beta.15",
-    "apexcharts": "^3.36.3",
-    "axios": "^1.2.1",
-    "core-js": "^3.27.1",
-    "pinia": "^2.0.28",
-    "quasar": "^2.11.3",
-    "vue": "^3.2.45",
-    "vue-horizontal-timeline": "^0.12.0",
-    "vue-router": "^4.1.6",
-    "vue3-apexcharts": "^1.4.1"
+    "@quasar/extras": "1.15.9",
+    "@quasar/quasar-ui-qcalendar": "4.0.0-beta.15",
+    "apexcharts": "3.36.3",
+    "axios": "1.2.1",
+    "core-js": "3.27.1",
+    "pinia": "2.0.28",
+    "quasar": "2.11.3",
+    "vue": "3.2.45",
+    "vue-horizontal-timeline": "0.12.0",
+    "vue-router": "4.1.6",
+    "vue3-apexcharts": "1.4.1"
   },
   "devDependencies": {
     "@quasar/app-webpack": "^3.6.2",
